test/parser/cases/valid/small/extra_semicolon_warning.cp
main()
{
    let value = 1;;
    return value;
}
