test/parser/cases/invalid/small/for_missing_binding_keyword.cp
main()
{
    for(value : values) {
        return;
    }
}
